--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- INIZIO HEADER -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-50">
+                    <div class="logo">
+                        <img src="img/logo.png">
+                    </div>
+                </div>
+                <div class="col-50">
+                    <div class="link-header">
+                        <a class="link" style="color: white; text-decoration: none;" href="#">Planning</a>
+                        <a class="link" style="color: white; text-decoration: none;" href="#">Testimonials</a>
+                        <a class="link" style="color: white; text-decoration: none;" href="#">Features</a>
+                        <a class="link" style="color: white; text-decoration: none;" href="#">About Us</a>
+                        <a class="get-started link" style="color: black; text-decoration: none;" href="#">Get Started</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- FINE HEADER -->
+
     
 </body>
 </html>
