[UPD] First main part added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
     </header>
     <!-- FINE HEADER -->
 
-    
+    <!-- INIZIO MAIN -->
+    <main>
+        <div class="container-main">
+            <div class="row-main">
+                <div class="col-50-main">
+                    <div class="demo-application">ciao 1-1</div>
+                </div>
+                <div class="col-50-main">
+                    <div class="clean-code">ciao 1-2</div>
+                </div>
+                <div class="col-33-main-1">
+                    <div class="web-design">ciao 2-1</div>
+                </div>
+                <div class="col-33-main-2">
+                    <div class="developement">ciao 2-2</div>
+                </div>
+                <div class="col-33-main-3">
+                    <div class="branding">ciao 2-3</div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- FINE MAIN -->
 </body>
 </html>
