--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     <!-- INIZIO MAIN -->
     <main>
+
+        <!-- MAIN 1 -->
         <div class="container-main">
             <div class="row-main">
                 <div class="col-50-main">
@@ -52,6 +54,23 @@
                 </div>
             </div>
         </div>
+
+        <!-- MAIN 2 -->
+        <div class="container-main-2">
+            <div class="row-main-2">
+                <div class="col-50-main-2">
+                    <div class="square-1"></div>
+                </div>
+                <div class="col-50-main-2">
+                    <div class="square-2"></div>
+                </div>
+            </div>
+        </div>
+
+        
+
+
+
     </main>
 
     <!-- FINE MAIN -->
