[UPD] Third main part added

--- a/index.html
+++ b/index.html
@@ -67,7 +67,27 @@
             </div>
         </div>
 
-        
+        <!-- MAIN 3 -->
+        <div class="container-main-3">
+            <div class="row-main-3">
+                <div class="col-100-main-3">
+                    <div class="testimonials">TESTIMONIALS</div>
+                    <div class="expert-partners">We are committed expert partners</div>
+                    <div class="text-expert-partners">We place huge on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us get it right.</div>
+                </div>
+                <div class="col-100-main-3-2">
+                    <div class="mini-col">
+
+                    </div>
+                    <div class="mini-col">
+
+                    </div>
+                    <div class="mini-col">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
