[UPD] Fourth main part added

--- a/index.html
+++ b/index.html
@@ -83,8 +83,27 @@
 
                     </div>
                     <div class="mini-col">
-                        
+
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- MAIN 4 -->
+        <div class="container-main-4">
+            <div class="row-main-4">
+                <div class="col-100-main-4">
+                    <div class="benefit-working">Benefits of working with us</div>
+                </div>
+                <div class="col-33-main-4">
+                    <div class="mini-col-4"></div>
+                    <div class="mini-col-center-4"></div>
+                    <div class="mini-col-4"></div>
+                </div>
+                <div class="col-33-main-4">
+                    <div class="mini-col-4"></div>
+                    <div class="mini-col-center-4"></div>
+                    <div class="mini-col-4"></div>
                 </div>
             </div>
         </div>
