[UPD] Fifth main part added

--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
             </div>
         </div>
 
+        <!-- MAIN 5 -->
+        <div class="container-main-5">
+            <div class="row-main-5">
+                <div class="col-50-main-5">
+                    <div class="square-1-5"></div>
+                </div>
+                <div class="col-50-main-5">
+                    <div class="square-2-5"></div>
+                </div>
+            </div>
+        </div>
+
 
 
     </main>
