[UPD] Sixth main part added

--- a/index.html
+++ b/index.html
@@ -120,6 +120,27 @@
             </div>
         </div>
 
+        <!-- MAIN 6 -->
+        <div class="container-main-6">
+            <div class="row-main-6">
+                <div class="col-100-main-6">
+                    <div class="text-get-started">GET STARTED</div>
+                    <div class="simple">Simple, Transparent Pricing</div>
+                    <div class="free">It's Free!</div>
+                    <div class="text-main-6">We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans with more controls.</div>
+                    <div style="text-align: center; padding: 40px 0px;">
+                        <a class="href-get-started" style="text-decoration: none; color: rgba(151,146,228,255);" href="#">Get Started</a>
+                    </div>    
+                    <div class="copyright">
+                        <ul>Copyright 2021 Boolean
+                            <li style="display: inline; padding-left: 10px; padding-right: 10px;">* Classe XX</li>
+                            <li style="display: inline;"><a style="color: white;" href="#">* Privacy policy</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
     </main>
