--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
 
@@ -38,19 +39,39 @@
         <div class="container-main">
             <div class="row-main">
                 <div class="col-50-main">
-                    <div class="demo-application">ciao 1-1</div>
+                    <div class="demo-application">
+                        <div class="text-1-demo-application"><strong>Get a demo application</strong></div>
+                        <div class="text-2-demo-application">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, porro, quibusdam laborum voluptatem voluptates minus tempora nesciunt non.</div>
+                        <div class="text-3-demo-application"><a style="text-decoration: none; color: white;" href="#"><i class="fa-brands fa-apple"></i>App Store</a></div>
+                    </div>
                 </div>
                 <div class="col-50-main">
-                    <div class="clean-code">ciao 1-2</div>
+                    <div class="clean-code">
+                        <i style="color: rgba(0,132,253,255);" class="fa-solid fa-file-code"></i>
+                        <p class="text-clean-code"><strong>Clean Code</strong></p>
+                        <p class="text-clean-code-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, porro, quibusdam laborum voluptatem voluptates minus tempora nesciunt non.</p>
+                    </div>
                 </div>
                 <div class="col-33-main-1">
-                    <div class="web-design">ciao 2-1</div>
+                    <div class="web-design">
+                        <i style="color: rgba(0,132,253,255);" class="fa-solid fa-pen"></i>
+                        <p class="text-web-design"><strong>Web Design</strong></p>
+                        <p class="text-web-design-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, porro, quibusdam laborum voluptatem voluptates minus tempora nesciunt non.</p>                      
+                    </div>
                 </div>
                 <div class="col-33-main-2">
-                    <div class="developement">ciao 2-2</div>
+                    <div class="developement">
+                        <i style="color: rgba(0,132,253,255);" class="fa-solid fa-laptop-code"></i>
+                        <p class="text-developement"><strong>Developement</strong></p>
+                        <p class="text-developement-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, porro, quibusdam laborum voluptatem voluptates minus tempora nesciunt non.</p>        
+                    </div>
                 </div>
                 <div class="col-33-main-3">
-                    <div class="branding">ciao 2-3</div>
+                    <div class="branding">
+                        <i style="color: rgba(0,132,253,255);" class="fa-solid fa-bullhorn"></i>
+                        <p class="text-branding"><strong>Branding</strong></p>
+                        <p class="text-branding-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, porro, quibusdam laborum voluptatem voluptates minus tempora nesciunt non.</p>
+                    </div>
                 </div>
             </div>
         </div>
