[UPD] Added content within main 2

--- a/index.html
+++ b/index.html
@@ -80,10 +80,19 @@
         <div class="container-main-2">
             <div class="row-main-2">
                 <div class="col-50-main-2">
-                    <div class="square-1"></div>
+                    <div class="square-1">
+                        <img class="img-square-1" src="img/planning1.png">
+                        <div class="text-square-1">Strategic Planning</div>
+                        <p class="text-2-square-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste vitae magni laboriosam saepe minus dolore provident consequuntur. Quidem aperiam ea corrupti sunt numquam ipsa harum neque minima quasi libero.</p>
+                    </div>
                 </div>
                 <div class="col-50-main-2">
-                    <div class="square-2"></div>
+                    <div class="square-2">
+                        <img class="img-square-2" src="img/planning2.png">
+                        <div class="text-square-2"><strong>App Developement</strong></div>
+                        <p class="text-2-square-2">Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
+                        <a style="color: black;" href="#"><i class="fa-solid fa-arrow-down text-3-square-2"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
