[UPD] Added content within main 3

--- a/index.html
+++ b/index.html
@@ -106,14 +106,32 @@
                     <div class="text-expert-partners">We place huge on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us get it right.</div>
                 </div>
                 <div class="col-100-main-3-2">
-                    <div class="mini-col">
-
+                    <div class="mini-col" style="display: flex;">
+                        <img class="testimonial1" src="img/testimonial1.jpg">
+                        <p class="text-testimonial1">
+                            <i style="color: white;" class="fa-solid fa-quote-left"></i>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Prasent semper feugiat nibh pulvinar proin.
+                            <i style="color: white;" class="fa-solid fa-quote-right"></i>
+                            <div class="text-testimonial2">NAT REYNOLDS</div>
+                        </p>              
                     </div>
-                    <div class="mini-col">
-
+                    <div class="mini-col" style="display: flex;">
+                        <img class="testimonial2" src="img/testimonial2.jpg">
+                        <p class="text-testimonial1">
+                            <i style="color: white;" class="fa-solid fa-quote-left"></i>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Prasent semper feugiat nibh pulvinar proin.
+                            <i style="color: white;" class="fa-solid fa-quote-right"></i>
+                            <p class="text-testimonial2">CELIA ALMEDA</p>
+                        </p>
                     </div>
-                    <div class="mini-col">
-
+                    <div class="mini-col" style="display: flex;">
+                        <img class="testimonial3" src="img/testimonial3.jpg">
+                        <p class="text-testimonial1">
+                            <i style="color: white;" class="fa-solid fa-quote-left"></i>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Prasent semper feugiat nibh pulvinar proin.
+                            <i style="color: white;" class="fa-solid fa-quote-right"></i>
+                            <p class="text-testimonial2">BOB ROBERTS</p>
+                        </p>      
                     </div>
                 </div>
             </div>
