[UPD] Added content within main 4

--- a/index.html
+++ b/index.html
@@ -144,14 +144,56 @@
                     <div class="benefit-working">Benefits of working with us</div>
                 </div>
                 <div class="col-33-main-4">
-                    <div class="mini-col-4"></div>
-                    <div class="mini-col-center-4"></div>
-                    <div class="mini-col-4"></div>
+                    <div class="mini-col-4">
+                        <div class="number">01</div>
+                        <div class="title-number"><strong>Hight Quality</strong></div>
+                        <div class="text-number">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis</div>
+                        <div style="padding-top: 30px;">
+                            <a class="link-number" href="#" style="text-decoration: none; color: white;">more</a>
+                        </div>
+                    </div>
+                    <div class="mini-col-center-4">
+                        <div class="number">02</div>
+                        <div class="title-number"><strong>Creative Team</strong></div>
+                        <div class="text-number">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis</div>
+                        <div style="padding-top: 30px;">
+                            <a class="link-number" href="#" style="text-decoration: none; color: white;">more</a>
+                        </div>
+                    </div>
+                    <div class="mini-col-4">
+                        <div class="number">03</div>
+                        <div class="title-number"><strong>Amazing Results</strong></div>
+                        <div class="text-number">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis</div>
+                        <div style="padding-top: 30px;">
+                            <a class="link-number" href="#" style="text-decoration: none; color: white;">more</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-33-main-4">
-                    <div class="mini-col-4"></div>
-                    <div class="mini-col-center-4"></div>
-                    <div class="mini-col-4"></div>
+                    <div class="mini-col-4">
+                        <div class="number">04</div>
+                        <div class="title-number"><strong>Best Pricing</strong></div>
+                        <div class="text-number">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis</div>
+                        <div style="padding-top: 30px;">
+                            <a class="link-number" href="#" style="text-decoration: none; color: white;">more</a>
+                        </div>
+                    </div>
+                    <div class="mini-col-center-4">
+                        <div class="number">05</div>
+                        <div class="title-number"><strong>Innovations</strong></div>
+                        <div class="text-number">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis</div>
+                        <div style="padding-top: 30px;">
+                            <a class="link-number" href="#" style="text-decoration: none; color: white;">more</a>
+                        </div>
+                    </div>
+                    <div class="mini-col-4">
+                        <div class="number">06</div>
+                        <div class="title-number"><strong>24/7 Support</strong></div>
+                        <div class="text-number">Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar proin id venenatis</div>
+                        <div style="padding-top: 30px;">
+                            <a class="link-number" href="#" style="text-decoration: none; color: white;">more</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
