[UPD] Added content within main 5

--- a/index.html
+++ b/index.html
@@ -202,10 +202,18 @@
         <div class="container-main-5">
             <div class="row-main-5">
                 <div class="col-50-main-5">
-                    <div class="square-1-5"></div>
+                    <div class="square-1-5">
+                        <div class="title-square-1-5"><strong>About Us</strong></div>
+                        <p class="text-square-1-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias perspiciatis necessitatibus veritatis sequi eveniet obcaecati quis id odio, placeat esse cupiditate tempora explicabo in, tempore ipsum deserunt animi sapiente harum.</p>
+                        <p class="text-square-1-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias perspiciatis necessitatibus veritatis sequi eveniet obcaecati quis id odio, placeat esse cupiditate tempora explicabo in, tempore ipsum deserunt animi sapiente harum.</p>
+                    </div>
                 </div>
                 <div class="col-50-main-5">
-                    <div class="square-2-5"></div>
+                    <div class="square-2-5">
+                        <img class="img-square-2-5" src="img/about.jpg">
+                        <div class="text-square-2-5"><strong>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</strong></div>
+                        <div class="link-square-2-5"><a style="text-decoration: none; color: white;" href="#">Find me on linkedin</a></div>
+                    </div>
                 </div>
             </div>
         </div>
